# Adaptive-compression

./: LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
adios-1.9.0/: Makefile.in  aclocal.m4  adios_git_status  config.h.in  configure  configure.ac  run.sh
adios-1.9.0/autom4te.cache/: output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
adios-1.9.0/config/: ac_acomp.m4  ac_blosc.m4
adios-1.9.0/examples/: Makefile.in
adios-1.9.0/examples/C/: Makefile.in
adios-1.9.0/examples/Fortran/: Makefile.in
adios-1.9.0/src/: Makefile.in  adios_write_mod.mod
adios-1.9.0/src/transforms/: Makefile.plugins  adios_transform_acomp_read.c  adios_transform_acomp_write.c  adios_transform_blosc_read.c  adios_transform_blosc_write.c  adios_transform_bzip2_write.c  adios_transform_zlib_write.c  transform_plugins.h
adios-1.9.0/src/write/: adios_comp.c  adios_nc4.c
adios-1.9.0/tests/: Makefile.in
adios-1.9.0/tests/C/: Makefile.in
adios-1.9.0/tests/Fortran/: Makefile.in
adios-1.9.0/tests/bp_read/: Makefile.in
adios-1.9.0/tests/genarray/: Makefile.in  copyarray2d_comm.mod  copyarray_comm.mod  gmon.out
adios-1.9.0/tests/suite/: Makefile.in
adios-1.9.0/utils/: Makefile.in
adios-1.9.0/utils/adios_lint/: Makefile.in
adios-1.9.0/utils/bp2ascii/: Makefile.in
adios-1.9.0/utils/bp2bp/: Makefile.in
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
build-aux/: compile  config.guess  config.sub  depcomp  install-sh  missing
src/: Makefile.am  Makefile.in  acomp.c  acomp.h  acomp_types.h  byte_analyzer.c  byte_analyzer.h  chunking.c  chunking.h  compressor.c  compressor.h  hash_util.h  plot.h  plot_gnuplot.c  preconditioners.c  preconditioners.h  util.h
(+67 files in other folders)
